tests/fsharp/typecheck/sigs/neg_byref_22.bsl

neg_byref_22.fs(5,16,5,17): typecheck error FS0001: This expression was expected to have type
    'float'    
but here has type
    'int'    
