tests/fsharp/typecheck/sigs/neg_byref_22.fs
(* Regression for Bug 1358 *)
module Test
let rec f () = f () : int byref;;

let x = (1.0 = 1)

